<resources>
    <string name="app_name">SettingsDemo</string>
    <string name="str_btn_user_mode">User Mode</string>
    <string name="str_btn_admin_mode">Admin Mode</string>
    <string name="str_wifi_settings">"Wifi Settings          "</string>
    <string name="str_bluetooth_settings">"BT Settings           "</string>
    <string name="str_btn_voice_command">Voice Command</string>
    <string name="str_btn_about">About Device</string>
    <string name="str_dev_sn">Serial Number</string>
    <string name="str_dev_system_version">System Version</string>
    <string name="str_dev_system_update">System Update</string>
    <string name="str_dev_admin_mode">Admin Mode</string>
    <string name="str_tips">密码：1234</string>
    <string name="str_brightness">Brightness</string>
    <string name="str_volume">Volume</string>
    <string name="str_title_wifi">WIFI</string>
    <string name="str_title_bluetooth">BLUETOOTH</string>

    <string name="str_action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_on">Turn On</string>
    <string name="str_off">Turn Off</string>
    <string name="str_visible">Get Visible</string>
    <string name="str_show_paired_devices">Paired Devices</string>
    <string name="str_devices_found">Devices Found</string>

    <string name="str_bt_searching">搜索中。。。</string>
    <string name="str_bt_searching_done">搜索完成！</string>
    <string name="str_bt_list_paired_devices_below">已配对蓝牙设备如下：</string>
    <string name="str_bt_list_unpaired_devices_below">未配对蓝牙设备如下：</string>



</resources>
