<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textView_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/str_dev_sn"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_system_version"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textView_system_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_system_update"
        android:text="@string/str_dev_sn"
        android:textSize="@dimen/menu_text_size"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/textView_system_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:text="@string/str_dev_system_update"
        android:textSize="@dimen/menu_text_size"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/btn_admin_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_system_update"
        android:layout_centerHorizontal="true"
        android:text="@string/str_btn_admin_mode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_admin_mode"
        android:text="@string/str_tips"
        android:textSize="@dimen/menu_text_size"
        android:layout_centerHorizontal="true"
        />



</androidx.constraintlayout.widget.ConstraintLayout>