<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:text="@string/str_btn_user_mode"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/switch_wifi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/switch_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/str_wifi_settings"
        android:textOff="   "
        android:textOn="   "
        app:layout_constraintBottom_toTopOf="@+id/switch_bluetooth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/switch_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/str_bluetooth_settings"
        android:textOff="   "
        android:textOn="   "
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/str_btn_about"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/textview_brightness_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="255"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekbar_brightness"
        app:layout_constraintTop_toBottomOf="@+id/btn_about"
        android:layout_marginLeft="50dp"
        />

    <SeekBar
        android:id="@+id/seekbar_brightness"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textview_brightness_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:max="255"
        android:paddingTop="20dp"
        android:paddingLeft="200dp"
        android:paddingRight="200dip"
        android:progress="255"
        />
    <TextView
        android:id="@+id/textview_audio_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="255"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekbar_audio_media"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_brightness"
        android:layout_marginLeft="50dp"
        />

    <SeekBar
        android:id="@+id/seekbar_audio_media"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textview_audio_media"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_brightness"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:max="255"
        android:paddingTop="20dp"
        android:paddingLeft="200dp"
        android:paddingRight="200dip"
        android:progress="255"
        />
    <TextView
    android:id="@+id/textview_audio_ring"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="255"
    android:textSize="@dimen/menu_text_size"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/seekbar_audio_ring"
    app:layout_constraintTop_toBottomOf="@+id/seekbar_audio_media"
    android:layout_marginLeft="50dp"
    />

    <SeekBar
        android:id="@+id/seekbar_audio_ring"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textview_audio_ring"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_audio_media"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:max="255"
        android:paddingTop="20dp"
        android:paddingLeft="200dp"
        android:paddingRight="200dip"
        android:progress="255"
        />
    <TextView
        android:id="@+id/textview_audio_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="255"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekbar_audio_alarm"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_audio_ring"
        android:layout_marginLeft="50dp"
        />

    <SeekBar
        android:id="@+id/seekbar_audio_alarm"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textview_audio_alarm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_audio_ring"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:max="255"
        android:paddingTop="20dp"
        android:paddingLeft="200dp"
        android:paddingRight="200dip"
        android:progress="255"
        />
</androidx.constraintlayout.widget.ConstraintLayout>